--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.17.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "prom-client": "^14.1.0"
   },
   "devDependencies": {},
   "engines": {
