--- a/Cloudformation/Infra.yaml
+++ b/Cloudformation/Infra.yaml
@@ -4,9 +4,6 @@ Description: 'FOR us-west-2(oregon), CFN template for primary and replica Postgr
 Resources:
   EC2Role:
     Type: "AWS::IAM::Role"
-    DependsOn: 
-      - PrimaryRDSInstance
-      - ReplicaRDSInstance
     Properties:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
@@ -16,26 +13,90 @@ Resources:
               Service: "ec2.amazonaws.com"
             Action: "sts:AssumeRole"
       Policies:
-        - PolicyName: "EC2S3ReAcc"
+        - PolicyName: "EC2AppAccess"
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              - Effect: 'Allow'
+              # RDS Access for Database Operations
+              - Effect: Allow
                 Action:
-                  - 'rds:DescribeDBInstances'
-                  - 'rds:Connect'
-                  - 'rds:ExecuteStatement'
+                  - rds:DescribeDBInstances
+                  - rds:Connect
+                  - rds:ExecuteStatement
                 Resource:
                   - !GetAtt PrimaryRDSInstance.Arn
                   - !GetAtt ReplicaRDSInstance.Arn
 
-              - Effect: "Allow"
+              # S3 Access for Jenkins Jobs and Artifacts
+              - Effect: Allow
+                Action: 
+                  - s3:ListBucket
+                Resource: arn:aws:s3:::twentyseventhbucket
+
+              - Effect: Allow
                 Action:
-                  - 's3:ListBucket'
-                  - 's3:GetObject'
-                  - 's3:PutObject'
-                  - 's3:DeleteObject'
-                Resource: "arn:aws:s3:::twentyseventhbucket/*"
+                  - s3:GetObject
+                  - s3:PutObject
+                  - s3:DeleteObject
+                Resource: arn:aws:s3:::twentyseventhbucket/*
+
+              # EKS Cluster Management (via Jenkins)
+              - Effect: Allow
+                Action:
+                  - eks:CreateCluster
+                  - eks:DescribeCluster
+                  - eks:ListClusters
+                  - eks:UpdateClusterVersion
+                  - eks:UpdateClusterConfig
+                  - eks:DeleteCluster
+                  - eks:DescribeNodegroup
+                  - eks:ListNodegroups
+                  - eks:CreateNodegroup
+                  - eks:DeleteNodegroup
+                  - eks:UpdateNodegroupConfig
+                  - eks:AccessKubernetesApi
+                Resource: "*"
+
+              # IAM PassRole for EKS Node Groups
+              - Effect: Allow
+                Action:
+                  - iam:PassRole
+                Resource: 
+                  - "arn:aws:iam::799344209838:role/eks-*"
+
+              # CloudFormation for Cluster Infrastructure Management
+              - Effect: Allow
+                Action:
+                  - cloudformation:CreateStack
+                  - cloudformation:UpdateStack
+                  - cloudformation:DeleteStack
+                  - cloudformation:DescribeStacks
+                  - cloudformation:ListStackResources
+                  - cloudformation:GetTemplate
+                Resource: "*"
+
+              # EC2 Permissions for Networking and Instance Management
+              - Effect: Allow
+                Action:
+                  - ec2:DescribeInstances
+                  - ec2:DescribeRegions
+                  - ec2:DescribeSecurityGroups
+                  - ec2:DescribeSubnets
+                  - ec2:DescribeVpcs
+                  - ec2:DescribeRouteTables
+                  - ec2:DescribeNetworkInterfaces
+                  - ec2:CreateTags
+                  - ec2:DescribeTags
+                Resource: "*"
+
+              # Autoscaling for EKS Nodegroups
+              - Effect: Allow
+                Action:
+                  - autoscaling:DescribeAutoScalingGroups
+                  - autoscaling:DescribeAutoScalingInstances
+                  - autoscaling:DescribeLaunchConfigurations
+                  - autoscaling:DescribeTags
+                Resource: "*"
 
   EC2InstanceProfile:
     Type: "AWS::IAM::InstanceProfile"
