--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@
 AWS_REGION=us-west-2
 DB_HOST=myprimarypgdb.clushmnnhufs.us-west-2.rds.amazonaws.com
 READ_REPLICA_HOST=myreplicapgdb.clushmnnhufs.us-west-2.rds.amazonaws.com
-DB_USER=************
+DB_USER=admin
 DB_PORT=5432
-DB_PASSWORD=************
+DB_PASSWORD=${DBPASS}
 DB_NAME=primarydb
 
 
 # GitHub Repository URL
-GITHUB_REPO_URL=https://github.com/************/LinkProject.git
+GITHUB_REPO_URL=https://github.com/shashank6613/My-Kubernetes-Project.git
 
 # Kubernetes Deployment Manifest File Paths
 FRONTEND_DEPLOYMENT_FILE=k8s/manifests/frontend-deployment.yaml
