--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 AWS_REGION=us-west-2
 DB_HOST=myprimarypgdb.clushmnnhufs.us-west-2.rds.amazonaws.com
 READ_REPLICA_HOST=myreplicapgdb.clushmnnhufs.us-west-2.rds.amazonaws.com
-DB_USER=admin
+DB_USER=shank
 DB_PORT=5432
 DB_PASSWORD=${DBPASS}
 DB_NAME=primarydb
