--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,6 +1,6 @@
 server:
   service:
-    type: ClusterIP  # Use ClusterIP for internal routing
+    type: ClusterIP
 alertmanager:
   service:
     type: ClusterIP
@@ -25,14 +25,35 @@ ingress:
   enabled: true
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
   hosts:
-    - host: monitoring.yourdomain.com change to <External-IP>
+    - host: '****' change to <External-IP>
       paths:
-        - path: /prometheus
+        - path: /prometheus(/|$)(.*)
           pathType: Prefix
-        - path: /alertmanager
+          backend:
+            service:
+              name: prometheus-server
+              port:
+                number: 9090
+        - path: /alertmanager(/|$)(.*)
           pathType: Prefix
-        - path: /grafana
+          backend:
+            service:
+              name: alertmanager
+              port:
+                number: 9093
+        - path: /grafana(/|$)(.*)
           pathType: Prefix
-        - path: /argocd
+          backend:
+            service:
+              name: grafana
+              port:
+                number: 3000
+        - path: /argocd(/|$)(.*)
           pathType: Prefix
+          backend:
+            service:
+              name: argocd-server
+              port:
+                number: 80
