--- a/k8s/manifests/backend-deployment.yaml
+++ b/k8s/manifests/backend-deployment.yaml
@@ -21,16 +21,25 @@ spec:
             - containerPort: 5000
           env:
             - name: DB_HOST
-              value: "myprimarypgdb.clushmnnhufs.us-west-2.rds.amazonaws.com"
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: DB_HOST
             - name: DB_USER
-              value: "shank"
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: DB_USER
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
                   name: db-credentials
-                  key: DBPASS
+                  key: DB_PASS
             - name: DB_NAME
-              value: "primarydb"
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: DB_NAME
             - name: READ_REPLICA_HOST
               value: "myreplicapgdb.clushmnnhufs.us-west-2.rds.amazonaws.com"
 ---
