--- a/k8s/manifests/frontend-deployment.yaml
+++ b/k8s/manifests/frontend-deployment.yaml
@@ -29,7 +29,6 @@ spec:
   selector:
     app: frontend
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
-      nodePort: 30080
-  type: NodePort
