--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_HOST=myprimarypgdb.clushmnnhufs.us-west-2.rds.amazonaws.com
 READ_REPLICA_HOST=myreplicapgdb.clushmnnhufs.us-west-2.rds.amazonaws.com
 DB_USER=shank
 DB_PORT=5432
-DB_PASSWORD=k8admin1234link
+DB_PASS=k8admin1234link
 DB_NAME=primarydb
 
 
