--- a/Prometheus/prometheus-values.yaml
+++ b/Prometheus/prometheus-values.yaml
@@ -10,6 +10,14 @@ grafana:
 grafana:
   adminPasswordKey: admin-password
   adminPasswordSecret: grafana-admin-password
+  resources:
+    requests:
+      memory: "128Mi"
+      cpu: "100m"
+    limits:
+      memory: "256Mi"
+      cpu: "200m"
+
 serviceMonitors:
   - name: backend-metrics
     namespace: default
