--- a/k8s/ingress/stack-ingress.yaml
+++ b/k8s/ingress/stack-ingress.yaml
@@ -8,8 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: ''  #change this from the command run above as "kubectl get svc -n ingress-nginx"
-      http:
+    - http:
         paths:
           - path: /prometheus
             pathType: Prefix
