--- a/Script/cluster-config.yaml
+++ b/Script/cluster-config.yaml
@@ -6,13 +6,12 @@ metadata:
   region: us-west-2
   version: "1.32"
 
-nodeGroups:
+managedNodeGroups:
   - name: stand-work
     instanceType: t3.medium
     desiredCapacity: 2
     minSize: 2
     maxSize: 3
-    managed: true
 
 iam:
   withOIDC: true
