--- a/Script/aws-auth.yaml
+++ b/Script/aws-auth.yaml
@@ -9,6 +9,12 @@ data:
       username: jenkins
       groups:
         - system:masters
+    - rolearn: arn:aws:iam::799344209838:role/Project-Role-K8
+        username: system:node:{{EC2PrivateDNSName}}
+      groups:
+        - system:bootstrappers
+        - system:nodes
+        - system:masters      
   mapUsers: |
     - userarn: arn:aws:iam::799344209838:user/anshu
       username: anshu
