--- a/Script/cluster-config.yaml
+++ b/Script/cluster-config.yaml
@@ -15,3 +15,9 @@ managedNodeGroups:
 
 iam:
   withOIDC: true
+
+identityMappings:
+  - arn: arn:aws:iam::799344209838:role/Project-Role-K8
+    username: ubuntu
+    groups:
+      - system:masters
