--- a/k8s/ingress/stack-ingress.yaml
+++ b/k8s/ingress/stack-ingress.yaml
@@ -4,41 +4,41 @@ metadata:
   name: monitoring-ingress
   namespace: monitoring
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /prometheus
+          - path: /prometheus(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: prometheus-kube-prometheus-prometheus
                 port:
                   number: 9090
-          - path: /alertmanager
+          - path: /alertmanager(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: prometheus-kube-prometheus-alertmanager
                 port:
                   number: 9093
-          - path: /grafana
+          - path: /grafana(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: prometheus-grafana
                 port:
                   number: 80
-          - path: /argocd
+          - path: /argocd(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: argocd-server
                 port:
                   number: 80
-          - path: /  # Frontend app at root path '/'
+          - path: /()(.*)  # Frontend app at root path '/'
             pathType: Prefix
             backend:
               service:
