--- a/ArgoCD-config/argo-app.yaml
+++ b/ArgoCD-config/argo-app.yaml
@@ -18,3 +18,6 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+    env:
+      - name: ARGOCD_SERVER_BASE_HREF
+        value: /argocd
